temporary header fix on mobile

--- a/assets/css/navigation.css
+++ b/assets/css/navigation.css
@@ -11,6 +11,10 @@
   box-shadow: 0px 3px 2px 0px rgba(0,0,0,0.2);
   z-index: 100;
   transition: .5s;
+
+  @media(max-width: 53rem) {
+    justify-content: center;
+  }
 }
 .navigation ul {
   display: flex;
@@ -44,6 +48,10 @@
   background-color:var(--color-navy--light);
   color: var(--color-off-white);
   transition:.3s;
+
+  @media(max-width: 53rem) {
+    display: none;
+  }
 }
   .logo span {
     font-size: 1.5rem;
